--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
             <li><b>Job Status</b> : Full-Time</li>
             <li><b>Experience</b> : 6 years</li>
-            <li><b>Role</b> : Full Stack Developer </li>
+            <li><b>Role</b> : Quality Engineer </li>
           </ul>
       </td>
     </tr>
